# datastructureBasic

./: .gitignore  CMakeLists.txt
assignment/: assiginment01
assignment/01/: 202021699_서일현  202021699_서일현.c
assignment/02/: asg.c
chap01-Array-and-Pointer/: prac-01  prac-01.c  prac-02  prac-02.c  prac-03  prac-03.c  prac-04  prac-04.c  prac-05  prac-05.c  prac-06  prac-06.c  prac-07  prac-07.c  prac-08  prac-08.c
chap02-Structure-and-Recursion/: prac-01  prac-01.c  prac-02  prac-02.c  prac-03  prac-03.c  prac-04  prac-04.c  prac-05  prac-05.c  prac-06  prac-06.c  prac-07  prac-07.c  prac-08  prac-08.c
chap03-SequenceDataStructure-and-LinkedList/: prac03  prac03.c  prac05  prac06  prac06.c  prac07  prac07.c
chap03-SequenceDataStructure-and-SequencialList/: prac01  prac01.c  prac02  prac02.c  prac03.c  prac04  prac04.c  prac05.c  prac07  prac07.c
chap04-LinkedDataStructure-and-LinkedList/: prac01  prac01.c  prac02  prac02.c  prac03  prac03.c
chap05-Stack/: prac01.c  prac02.c  prac03.c  prac04.c  prac05.c
chap06-Queue-and-Deque/: prac01.c  prac02.c  prac03.c  prac04.c  prac05.c
chap07-Tree/: prac01.c  prac02.c
chap08-Graph/: prac01.c  prac02.c  prac03.c  prac04.c
test/: test  test.c
